one path in the tree goes to a makeGraph function
TODO: make a graph! Finish the rest of the branches!

--- a/assets/styles/templates/questions.handlebars
+++ b/assets/styles/templates/questions.handlebars
@@ -4,7 +4,16 @@
   <div>
     {{#each buttons}}
   <div class="col-md-auto">
-    <input type="submit" value="{{this.label}}" id="{{this.id}}" class="btn-lg btn btn-success">
+    <input type="submit" value="{{this.label}}" id="{{this.id}}" class="btn-lg btn btn-success {{../class}}">
   </div>
   {{/each}}
+{{#each form}}
+<form>
+  {{this}}<input type="text" id="this"></div>
+
+{{/each}}
+<div>
+{{#each submit}}
+  <input type="submit" value="{{this}}" class="btn btn-success graph-creation">
+  {{/each}} </div>
 </form>
