scatter plot is graphing everything now. and updates on submit!
TODO: the same for bar graphs, and make the other options

--- a/assets/styles/templates/questions.handlebars
+++ b/assets/styles/templates/questions.handlebars
@@ -22,6 +22,6 @@
     <input type="submit"
            value="{{this}}"
            class="btn btn-success graph-creation">
-           <input hidden type="text" name="credentials[type]" value="{{../type}}"></input>
+           <input hidden type="text" name="credentials[type]" value="{{../type}}">
   {{/each}}
 </form>
