entire tree brings you to graph creation. all graphs templated

--- a/assets/styles/templates/questions.handlebars
+++ b/assets/styles/templates/questions.handlebars
@@ -15,7 +15,7 @@
       {{this.label}}
       <input type="text"
            name="credentials[{{this.id}}]"
-           id="{{this.id}}">
+           id="{{this.id}}"><br>
   </div>
     {{/each}}
   {{#each submit}}
