--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -19,3 +19,54 @@ input {
   max-width: 300;
   max-height: 300
 }
+
+#login-dp, #signup-dp {
+    min-width: 250px;
+    padding: 14px 14px 0;
+    overflow:hidden;
+    background-color:rgba(255,255,255,.8);
+}
+#login-dp .help-block, #signup-dp .help-block {
+    font-size:12px
+}
+#login-dp .bottom, #signup-dp .bottom {
+    background-color:rgba(255,255,255,.8);
+    border-top:1px solid #ddd;
+    clear:both;
+    padding:14px;
+}
+#login-dp .social-buttons, #signup-dp .social-buttons {
+    margin:12px 0
+}
+#login-dp .social-buttons a, #signup-dp .social-buttons a {
+    width: 49%;
+}
+#login-dp .form-group, #signup-dp .form-group {
+    margin-bottom: 10px;
+}
+.btn-fb{
+    color: #fff;
+    background-color:#3b5998;
+}
+.btn-fb:hover{
+    color: #fff;
+    background-color:#496ebc
+}
+.btn-tw{
+    color: #fff;
+    background-color:#55acee;
+}
+.btn-tw:hover{
+    color: #fff;
+    background-color:#59b5fa;
+}
+@media(max-width:768px){
+    #login-dp, #signup-dp{
+        background-color: inherit;
+        color: #fff;
+    }
+    #login-dp, #signup-dp .bottom{
+        background-color: inherit;
+        border-top:0 none;
+    }
+}
