--- a/assets/styles/templates/questions.handlebars
+++ b/assets/styles/templates/questions.handlebars
@@ -7,7 +7,8 @@
       <input type="submit"
            value="{{this.label}}"
            id="{{this.id}}"
-           class="btn-lg btn btn-success {{../class}}">
+           class="btn-lg btn btn-success {{../class}} data-toggle='tooltip' data-placement='right'">
+           <div class="tooltip-inner">{{this.hover}}</div>
     </div>
     {{/each}}
     {{#each form}}
@@ -18,7 +19,7 @@
            id="{{this.id}}"><br>
   </div>
     {{/each}}
-  {{#each submit}}
+  {{#each suurebmit}}
     <input type="submit"
            value="{{this}}"
            class="btn btn-success graph-creation">
